[package]
name = "rich"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.4"
pulldown-cmark = { version = "0.9", default-features = false }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller than unwinding)
strip = true        # Strip symbols